--- a/OrderDesk/src/main/java/view/TelaInicial.form
+++ b/OrderDesk/src/main/java/view/TelaInicial.form
@@ -9,10 +9,23 @@
             <Property name="text" type="java.lang.String" value="Balc&#xe3;o"/>
           </Properties>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu2">
+        <Menu class="javax.swing.JMenu" name="JMCozinha">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cozinha"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMCozinhaActionPerformed"/>
+          </Events>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="JMTelaCozinha">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Tela Cozinha"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMTelaCozinhaActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu3">
           <Properties>
